--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <section>
         <div id="title">
           <h1>dobrohaxxor 
-            <p>The word <i>dobro</i> in Slavic languages is the root of many words that are tied to goodness, kindness and other nice concepts. The word <i>haxxor</i> is 13375p34k for the word <i>hacker</i>. The word <i>dobrohaxxor</i> is intended to suggest "ethical hacker". </p>
+            <p>The word <i>dobro</i> in Slavic languages is the root of many words that are tied to goodness, kindness and other nice concepts. The word <i>haxxor</i> is modified 13375p34k for the word <i>hacker</i>. The word <i>dobrohaxxor</i> is intended to suggest "ethical hacker". </p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
